--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -8,40 +8,58 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:layout_gravity="center_horizontal"
             android:gravity="center"
-            
-            android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/black" android:layout_gravity="center_horizontal"/>
-
+            android:text="@string/app_name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/black" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/johnydepp" android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/celebName"
+        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/purple" android:layout_gravity="center" android:layout_marginTop="5dp"/>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
         android:text="@string/sign_in"
-        android:gravity="center"        
-        android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="18dp" android:textColor="@color/orange"/>
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/orange"
+        android:textSize="18dp" />
 
     <Button
         android:id="@+id/facebookLogin"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="@string/facebook" android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:text="@string/facebook" />
 
     <Button
         android:id="@+id/twitterLogin"
         android:layout_width="100dp"
-        android:layout_height="wrap_content"        
-        android:text="@string/twitter" android:layout_gravity="center"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/twitter" />
 
 </LinearLayout>
