--- a/res/layout/about_fragment.xml
+++ b/res/layout/about_fragment.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/widget34"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollbarShareFrg"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    <ImageButton
-        android:id="@+id/imgBtn"
+    <LinearLayout
+        android:id="@+id/widget34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/johnydepp" />
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/txtCelebName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:text="@string/celebName"
-        android:textColor="@color/black" />
+        <ImageButton
+            android:id="@+id/imgBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/johnydepp" />
 
-     <ScrollView
-        android:id="@+id/scrollbarShareFrg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        <TextView
+            android:id="@+id/txtCelebName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="@string/celebName"
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -39,6 +39,6 @@
                 android:text="@string/aboutdetails"
                 android:textColor="@color/purple_light" />
         </LinearLayout>
-   </ScrollView>
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
